--- a/style.css
+++ b/style.css
@@ -46,10 +46,11 @@ input{
 	cursor: pointer;
 }
 h2{
-	margin:10rem;
+	margin:5rem;
 }
 @media screen and (max-width:600px){
 	h1{
+		margin-top:5rem;
 		padding:2rem;
 	}
 }
