--- a/style.css
+++ b/style.css
@@ -37,10 +37,12 @@ input{
 	align-items: center;
 	border:3px solid black;
 	color:black;
+	font-weight:bold;
 	height:40px;
 	width:150px;
 	border-radius:20px;
 	padding:1rem;
+	margin-top:2rem;
 }
 #btn:hover{
 	cursor: pointer;
