added inputs for individual iso8 crystals and hid them in css

--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ main{
 h1{
 	padding:10rem;
 }
+.hidden {
+	display:none;
+}
+.crystal-container{
+	display:none;
+}
 .input-container{
 	display:flex;
 	justify-content: center;
@@ -31,7 +37,7 @@ input{
 	padding:1rem;
 	height:40px;
 }
-#btn{
+.btn{
 	display:flex;
 	justify-content:center;
 	align-items: center;
@@ -44,7 +50,7 @@ input{
 	padding:1rem;
 	margin-top:2rem;
 }
-#btn:hover{
+.btn:hover{
 	cursor: pointer;
 }
 h2{
