--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 body{
 	font-size:15px;
+	color:white;
+	background:rgb(40, 40, 40);
 }
 main{
 	display:flex;
@@ -15,29 +17,37 @@ main{
 h1{
 	padding:5rem;
 }
-.hidden {
-	display:none;
+ .hidden {
+	display:flex;
 }
 .crystal-container{
-	display:none;
-}
-.input-container, .input-container2{
+	display:flex;
+} 
+.input-container{
 	display:flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 }
-form{
+.isoInput{
 	display:flex;
-	justify-content: center;
+}
+.isoInput label{
+	display: flex;
+	font-weight: bold;
 	align-items: center;
-	flex-direction: column;
+	justify-content: center;
+	width:5rem;
+	margin-right:1rem;
 }
 input{
+	display:flex;
 	padding:1rem;
-	height:40px;
+	margin:1rem;
+	height:2rem;
+	width:12rem;
 }
-.btn, .btn2{
+.btn{
 	display:flex;
 	justify-content:center;
 	align-items: center;
@@ -48,13 +58,28 @@ input{
 	width:150px;
 	border-radius:20px;
 	padding:1rem;
-	margin-top:2rem;
+	margin:2rem;
 }
-.btn:hover, .btn2:hover{
+.btn:hover{
 	cursor: pointer;
 }
 h2{
-	margin:5rem;
+	margin:1rem;
+}
+#healthResult{
+	color:green;
+}
+#armorResult{
+	color:blue;
+}
+#focusResult{
+	color:red;
+}
+#damageResult{
+	color:orange
+}
+#resistResult{
+	color:blanchedalmond
 }
 @media screen and (max-width:600px){
 	h1{
