--- a/style.css
+++ b/style.css
@@ -6,16 +6,31 @@
 body{
 	font-size:15px;
 	color:white;
-	background:rgb(40, 40, 40);
+	background:#1f8793;
+}
+.img-banner{
+	width:100%;
+	background-image: url(widebackground.jpeg);
+	background-size: cover;
+	min-height: 350px;
+	margin-bottom: .5rem;
+}
+img{
+	width:100%;
+	
 }
 main{
+	background-image: url(msfbackground.jpeg);
+	background-size: cover;
 	display:flex;
 	justify-content:center;
 	align-items: center;
 	flex-direction: column;
+	padding-bottom:2rem;
 }
 h1{
-	padding:5rem;
+	font-size:1rem;
+	padding:2rem;
 }
  .hidden {
 	display:flex;
@@ -33,6 +48,7 @@ h1{
 	display:flex;
 }
 .isoInput label{
+	font-size:.8rem;
 	display: flex;
 	font-weight: bold;
 	align-items: center;
@@ -48,15 +64,17 @@ input{
 	width:12rem;
 }
 .btn{
+	font-size: 1.4rem;
 	display:flex;
 	justify-content:center;
 	align-items: center;
 	border:3px solid black;
-	color:black;
+	color:white;
+	background:#ff9d00;
 	font-weight:bold;
-	height:40px;
+	height:50px;
 	width:150px;
-	border-radius:20px;
+	border-radius:5px;
 	padding:1rem;
 	margin:2rem;
 }
@@ -64,6 +82,7 @@ input{
 	cursor: pointer;
 }
 h2{
+	font-size: 1.2rem;
 	margin:1rem;
 }
 #healthResult{
