--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ img{
 main{
 	background-image: url(msfbackground.jpeg);
 	background-size: cover;
+	background-color: rgb(71, 71, 71);
+	background-blend-mode: overlay;
 	display:flex;
 	justify-content:center;
 	align-items: center;
